--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-3.13 (3.13.11-1+vyos2+lithium2) lithium; urgency=low
+
+  * Force release
+
+ -- Alex Harpin <development@landsofshadow.co.uk>  Sat, 13 Dec 2014 12:41:54 +0000
+ 
 linux-3.13 (3.13.11-1+vyos2+lithium1) lithium; urgency=low
 
   [ VyOS build user ]
